Fix right margin for right aligned buttons

--- a/app.less
+++ b/app.less
@@ -57,6 +57,12 @@
   }
 }
 
+.right.aligned {
+  .button {
+    margin: 0em 0em 0em 0.25em;
+  }
+}
+
 html, body {
   height: 100%;
 }
